--- a/styles/style.css
+++ b/styles/style.css
@@ -75,3 +75,23 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 	margin-top: 80px;
 }
 
+@media( max-width:1380px){
+	body{
+		background-color: red;
+	}
+	h1{
+		color: red;
+	}
+
+	.login{
+		align-self: center;
+	}
+	.container{
+		flex-direction: column;
+	}
+
+	.tabela{
+		align-self: center;
+		margin-left: 0;
+	}
+}
